--- a/index.html
+++ b/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Turtle Cases Co.</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="./sass/custom.css">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coder's Second Dream</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./sass/custom.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
 </head>
 
 
 <body>
 
-<!-- code here -->
+<!-- home page -->
+<div id="login" class="d-flex align-items-center justify-content-center collapse">
+    <div class="login-box d-flex align-items-center justify-content-center">
+        <div class="row">
+            <p class="text-center text-light">Prove You Code.</p>
+            <button id="signInGithub" class="btn btn-secondary">
+                <a id="github-button" class="btn btn-block btn-social btn-github">
+                    <i class="fa-brands fa-github"></i> Sign in with GitHub
+                </a>
+            </button>
+        </div>
+    </div>
+</div>
+<div id="home" class="d-flex align-items-center justify-content-center collapse">
+    Welcome To Coder's Second Dream
+</div>
 
 <!-- Footer -->
-<footer class="text-center py-3">
-  <p>&copy; 2025 Five Big Guys. All rights reserved.</p>
+<footer class="text-center py-3 text-light">
+    <div>
+        <p>&copy; 2025 Five Big Guys. All rights reserved.</p>
+    </div>
 </footer>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-<script src="./index.js"></script>
+<script src="index.js"></script>
 </body>
 
 </html>
