--- a/index.html
+++ b/index.html
@@ -17,29 +17,50 @@
 </head>
 
 
-<body>
+<body class="bg-dark">
 
 <!-- home page -->
-<div id="login" class="d-flex align-items-center justify-content-center collapse">
-    <div class="login-box d-flex align-items-center justify-content-center">
-        <div class="row">
-            <p class="text-center text-light">Prove You Code.</p>
-            <button id="signInGithub" class="btn btn-secondary">
-                <a id="github-button" class="btn btn-block btn-social btn-github">
-                    <i class="fa-brands fa-github"></i> Sign in with GitHub
-                </a>
-            </button>
+<div id="login">
+    <div class="d-flex align-items-center justify-content-center">
+        <pre style="font-size: 1.5vw">
+ _____           _           _          _____           _     ______
+/  __ \         | |         ( )        / __  \         | |    |  _  \
+| /  \/ ___   __| | ___ _ __|/ ___     `' / /'_ __   __| |    | | | |_ __ ___  __ _ _ __ ___
+| |    / _ \ / _` |/ _ \ '__| / __|      / / | '_ \ / _` |    | | | | '__/ _ \/ _` | '_ ` _ \
+| \__/\ (_) | (_| |  __/ |    \__ \    ./ /__| | | | (_| |    | |/ /| | |  __/ (_| | | | | | |
+ \____/\___/ \__,_|\___|_|    |___/    \_____/_| |_|\__,_|    |___/ |_|  \___|\__,_|_| |_| |_|
+        </pre>
+    </div>
+
+    <div class="d-flex align-items-center justify-content-center">
+        <div class="login-box">
+            <div class="terminal-header">
+                <div class="terminal-buttons">
+                    <span class="terminal-button close"></span>
+                    <span class="terminal-button minimize"></span>
+                    <span class="terminal-button maximize"></span>
+                </div>
+                <div class="terminal-title">Coder's Second Dream Authentication</div>
+            </div>
+            <div class="terminal-screen" id="terminalScreen">
+            </div>
         </div>
     </div>
 </div>
-<div id="home" class="d-flex align-items-center justify-content-center collapse">
+
+
+<div id="register">
+
+</div>
+
+<div id="home" class="d-flex align-items-center justify-content-center">
     Welcome To Coder's Second Dream
 </div>
 
 <!-- Footer -->
 <footer class="text-center py-3 text-light">
     <div>
-        <p>&copy; 2025 Five Big Guys. All rights reserved.</p>
+        <p>&#169; 2025 Five Big Guys. All rights reserved.</p>
     </div>
 </footer>
 <!-- Bootstrap JS -->
