--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@ Requires a value of type `Date`
         <!-- Left column (1/4) -->
         <div class="col-12 col-sm-3">
             <div class="profile-left-container">
-                <div class="profile-name-image m-0 w-100">
+                <div class="profile-name-image mb-2 w-100">
                     <img class="img-fluid rounded-top" id="profile-pfp">
                     <h1 id="profile-name" class="rounded-bottom">FIRST LAST</h1>
                 </div>
-                <div class="badge p-3 w-100">
+                <div class="badge w-100 m-0 mb-2">
                     <span class="m-1" id="profile-age"></span>
                     <span id="profile-aura"></span>
                 </div>
-                <div class="badge m-0 p-3 w-100">
+                <div class="badge m-0 w-100">
                     <span class="badge rank-intern w-100" id="profile-rank">Intern</span>
                     <br>
-                    <span class="badge flex-fill" id="profile-self"></span>
-                    <span class="badge flex-fill" id="profile-looking-for"></span>
+                    <span class="badge" id="profile-self"></span>
+                    <span class="badge" id="profile-looking-for"></span>
                 </div>
                 <hr>
                 <button class="btn btn-primary" id="profile-leave">
