update UI, add site desc

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <meta name="google-site-verification" content="R7Jgw5X7X2I55LuWHlIDYYm1nQ0nodojWzcSu39-J0w" />
+    <meta name="description" content="Coder's Second Dream, a site to recruit your beloved second half. Match with coder's based on similar interests! This is a coder exclusive matching app, usable by recruiters and developers alike!" />
 </head>
 
 
