--- a/index.html
+++ b/index.html
@@ -134,6 +134,24 @@ Requires a value of type `Date`
 </div>
 
 <div id="profile" class="d-none">
+    <!--pfp modal -->
+    <div class="modal fade" id="pfpModal" tabindex="-1" aria-labelledby="pfpModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-dark">
+                <div class="modal-header">
+                    <h5 class="modal-title">Change the profile picture link</h5>
+                </div>
+                <div class="modal-header">
+                    <input type="text" id="pfp-url-input" class="form-control border-3" placeholder="Enter new image URL">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="pfp-save-url">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Subscription Modal -->
     <div class="modal fade" id="subscriptionModal" tabindex="-1" aria-labelledby="subscriptionModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl">
@@ -153,6 +171,7 @@ Requires a value of type `Date`
                                     <h5 class="card-title">Free</h5>
                                     <ul class="list-inline pl-3 font-14 font-weight-medium text-dark text-start">
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>5 weekly match opportunities</span></li>
+                                        <li class="py-2"><i class="fa-solid fa-check"></i> <span>Limited match criteria</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>Limited messaging</span></li>
                                     </ul>
 
