add match pool visualizer

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@ Requires a value of type `Date`
     Welcome To Coder's Second Dream
 </div>
 
+<div id="matchpool" class="d-none container">
+    <div class="row" id="matchpool-container">
+
+    </div>
+</div>
+
 <div id="profile" class="d-none">
     <!--pfp modal -->
     <div class="modal fade" id="pfpModal" tabindex="-1" aria-labelledby="pfpModalLabel" aria-hidden="true">
