--- a/index.html
+++ b/index.html
@@ -259,11 +259,12 @@ Requires a value of type `Date`
                     <img class="img-fluid rounded-top" id="profile-pfp">
                     <h1 id="profile-name" class="rounded-bottom">FIRST LAST</h1>
                 </div>
-                <div class="badge w-100 m-0 mb-2">
-                    <span class="m-1" id="profile-age"></span>
-                    <span id="profile-aura"></span>
-                </div>
+
                 <div class="badge m-0 p-3 w-100" id="profile-edit-bounds">
+                    <div class="w-100 m-0 mb-2 pb-2">
+                            <span class="m-1" id="profile-age"></span>
+                            <span id="profile-aura"></span>
+                    </div>
                     <span class="badge rank-jobless w-100" id="profile-rank">Jobless</span>
                     <br>
                     <span class="badge mt-1" id="profile-self"></span>
