update matchpool ui

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Requires a value of type `Date`
 </div>
 
 <div id="matchpool" class="d-none container">
-    <div class="row" id="matchpool-container">
+    <div class="row mt-3" id="matchpool-container">
 
     </div>
 </div>
@@ -259,7 +259,7 @@ Requires a value of type `Date`
                     <img class="img-fluid rounded-top" id="profile-pfp">
                     <h1 id="profile-name" class="rounded-bottom">FIRST LAST</h1>
                 </div>
-
+                <hr>
                 <div class="badge m-0 p-3 w-100" id="profile-edit-bounds">
                     <div class="w-100 m-0 mb-2 pb-2">
                         <span class="m-1" id="profile-age"></span>
