--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Requires a value of type `Date`
 </div>
 
 <div id="matchpool" class="d-none container">
-    <h1 class="text-center mt-4 text-white">Your Current Matchpool.</h1>
+    <h1 class="text-center mt-4 text-white">Your Current Matchpool</h1>
     <div class="row mt-3" id="matchpool-container">
 
     </div>
