--- a/index.html
+++ b/index.html
@@ -150,18 +150,25 @@ Requires a value of type `Date`
         <div class="modal-dialog">
             <div class="modal-content bg-dark">
                 <div class="modal-header">
-                    <h5 class="modal-title">Change the profile picture link</h5>
+                    <h5 class="modal-title">Upload Photo</h5>
                 </div>
-                <div class="modal-header">
-                    <input type="text" id="pfp-url-input" class="form-control border-3" placeholder="Enter new image URL">
+                <div class="modal-body">
+                    <!-- File Upload -->
+                    <input type="file" id="pfp-file-input" accept="image/*" class="form-control mb-3">
+
+                    <!-- Image Preview and Cropper Container -->
+                    <div class="d-flex justify-content-center">
+                        <img id="pfp-preview" style="max-width: 100%; max-height: 350px; display: none;">
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="pfp-save-url">Save</button>
+                    <button type="button" class="btn btn-primary" id="pfp-save">Save</button>
                 </div>
             </div>
         </div>
     </div>
+
 
     <!-- Subscription Modal -->
     <div class="modal fade" id="subscriptionModal" tabindex="-1" aria-labelledby="subscriptionModalLabel" aria-hidden="true">
@@ -309,6 +316,9 @@ Requires a value of type `Date`
         <p>&#169; 2025 Five Big Guys. All rights reserved.</p>
     </div>
 </footer>
+<!-- cropper -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
