--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@ Requires a value of type `Date`
                 </div>
                 <div class="modal-body">
                     <!-- File Upload -->
+                    <div class="alert alert-primary" role="alert">
+                        It will take <span class="fw-bold">5 minutes</span> for changes to take effect.
+                    </div>
                     <input type="file" id="pfp-file-input" accept="image/*" class="form-control mb-3">
 
                     <!-- Image Preview and Cropper Container -->
