add versioning for cache busting

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Requires a value of type `Date`
                 <div class="modal-body">
                     <!-- File Upload -->
                     <div class="alert alert-primary" role="alert">
-                        It will take <span class="fw-bold">5 minutes</span> for changes to take effect.
+                        Max <span class="fw-bold">300 kilobyte</span> post-crop file limit.
                     </div>
                     <input type="file" id="pfp-file-input" accept="image/*" class="form-control mb-3">
 
