--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Requires a value of type `Date`
                 <div class="modal-body">
                     <!-- File Upload -->
                     <div class="alert alert-primary" role="alert">
-                        Max <span class="fw-bold">300 kilobyte</span> post-crop file limit.
+                        May require <span class="fw-bold">page-refresh</span> to view your new photo.
                     </div>
                     <input type="file" id="pfp-file-input" accept="image/*" class="form-control mb-3">
 
