--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@ Requires a value of type `Date`
 </div>
 
 <div id="matchpool" class="d-none container">
+    <div class="alert alert-danger alert-dismissible fade show d-none" id="alert-repeat-match" role="alert">
+        <strong id="matchpool-reset-text"></strong>
+        <button type="button" class="btn btn-close" data-dismiss="alert" aria-label="Close">
+        </button>
+    </div>
     <h1 class="text-center mt-4 text-white">Your Current Matchpool</h1>
     <div class="row mt-3" id="matchpool-container">
 
@@ -154,9 +159,6 @@ Requires a value of type `Date`
                 </div>
                 <div class="modal-body">
                     <!-- File Upload -->
-                    <div class="alert alert-primary" role="alert">
-                        May require <span class="fw-bold">page-refresh</span> to view your new photo.
-                    </div>
                     <input type="file" id="pfp-file-input" accept="image/*" class="form-control mb-3">
 
                     <!-- Image Preview and Cropper Container -->
