--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Requires a value of type `Date`
 <div id="matchpool" class="d-none container">
     <div class="alert alert-danger alert-dismissible fade show d-none" id="alert-repeat-match" role="alert">
         <strong id="matchpool-reset-text"></strong>
-        <button type="button" class="btn btn-close" data-dismiss="alert" aria-label="Close">
+        <button type="button" class="btn btn-close" data-bs-dismiss="alert" aria-label="Close">
         </button>
     </div>
     <h1 class="text-center mt-4 text-white">Your Current Matchpool</h1>
