--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="sass/custom.css">
     <!-- Font Awesome -->
@@ -24,7 +25,7 @@
 
 <body class="bg-dark">
 
-<!-- home page -->
+<!-- login page -->
 <div id="login" class="d-none">
     <div class="d-flex align-items-center justify-content-center">
         <pre style="font-size: 1.5vw">
@@ -133,17 +134,19 @@ Requires a value of type `Date`
     </div>
 </div>
 
-<div id="home" class="d-flex align-items-center justify-content-center d-none">
-    Welcome To Coder's Second Dream
-</div>
-
 <div id="matchpool" class="d-none container">
     <div class="alert alert-danger alert-dismissible fade show d-none" id="alert-repeat-match" role="alert">
         <strong id="matchpool-reset-text"></strong>
         <button type="button" class="btn btn-close" data-bs-dismiss="alert" aria-label="Close">
         </button>
     </div>
-    <h1 class="text-center mt-4 text-white">Your Current Matchpool</h1>
+    <!-- Navbar with back arrow and title -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="btn btn-link text-white" id="matchpool-back" aria-label="Back">
+            <i class="bi bi-arrow-left" style="font-size: 2rem;"></i>
+        </button>
+        <h1 class="navbar-brand mx-auto" style="font-size: 2rem;">Your Current Matchpool</h1>
+    </nav>
     <div class="row mt-3" id="matchpool-container">
 
     </div>
@@ -268,7 +271,7 @@ Requires a value of type `Date`
             </div>
         </div>
     </div>
-    <div class="row p-5">
+    <div class="row p-5 w-100">
         <!-- Left column (1/4) -->
         <div class="col-12 col-sm-3">
             <div class="profile-left-container">
