--- a/index.html
+++ b/index.html
@@ -140,12 +140,18 @@ Requires a value of type `Date`
         <button type="button" class="btn btn-close" data-bs-dismiss="alert" aria-label="Close">
         </button>
     </div>
-    <!-- Navbar with back arrow and title -->
+    <!-- Navbar with back arrow and title and notif center -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button class="btn btn-link text-white" id="matchpool-back" aria-label="Back">
             <i class="bi bi-arrow-left" style="font-size: 2rem;"></i>
         </button>
         <h1 class="navbar-brand mx-auto" style="font-size: 2rem;">Your Current Matchpool</h1>
+        <button class="btn btn-link text-white" id="matchpool-chats" aria-label="chats">
+            <i class="bi bi-chat" style="font-size: 2rem;"></i>
+        </button>
+        <button class="btn btn-link text-white" id="matchpool-mail" aria-label="mail">
+            <i class="bi bi-envelope" style="font-size: 2rem;"></i>
+        </button>
     </nav>
     <div class="row mt-3" id="matchpool-container">
 
@@ -271,6 +277,26 @@ Requires a value of type `Date`
             </div>
         </div>
     </div>
+
+    <!-- Logout Confirmation Modal -->
+    <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-dark">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="logoutModalLabel">Confirm Logout</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to log out?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="confirmLogout">Logout</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row p-5 w-100">
         <!-- Left column (1/4) -->
         <div class="col-12 col-sm-3">
@@ -294,10 +320,13 @@ Requires a value of type `Date`
                 <hr>
                 <div class="d-flex gap-2">
                     <button class="btn btn-primary" id="profile-leave">
-                        <i class="fa-solid fa-arrow-left"></i> Start Matching!
+                        <i class="fa-solid fa-arrow-left"></i> Match
                     </button>
                     <button class="btn btn-warning d-none" id="profile-match">
                         <i class="fa-regular fa-message"></i> Match
+                    </button>
+                    <button class="btn btn-danger" id="profile-logout">
+                        <i class="bi bi-box-arrow-right"></i> Logout
                     </button>
                 </div>
             </div>
