add 13+ requirement, make matching=pull

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ Requires a value of type `Date`
                         <i class="fa-solid fa-arrow-left"></i> Match
                     </button>
                     <button class="btn btn-warning d-none" id="profile-match">
-                        <i class="fa-regular fa-message"></i> Match
+                        <i class="fa-solid fa-code-pull-request"></i> Pull
                     </button>
                     <button class="btn btn-danger" id="profile-logout">
                         <i class="bi bi-box-arrow-right"></i> Logout
