add transitions and guide page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="bg-dark">
 
 <!-- login page -->
-<div id="login" class="d-none">
+<div id="login" class="d-none page-transition">
     <div class="d-flex align-items-center justify-content-center">
         <pre style="font-size: 1.5vw">
  _____           _           _          _____           _     ______
@@ -55,7 +55,7 @@
 </div>
 
 
-<div id="register" class="d-none">
+<div id="register" class="d-none page-transition">
     <div class="row">
         <div class="editor">
             <div class="line-number-container">
@@ -134,7 +134,7 @@ Requires a value of type `Date`
     </div>
 </div>
 
-<div id="matchpool" class="d-none container">
+<div id="matchpool" class="d-none container page-transition">
     <div class="alert alert-danger alert-dismissible fade show d-none" id="alert-repeat-match" role="alert">
         <strong id="matchpool-reset-text"></strong>
         <button type="button" class="btn btn-close" data-bs-dismiss="alert" aria-label="Close">
@@ -158,7 +158,7 @@ Requires a value of type `Date`
     </div>
 </div>
 
-<div id="profile" class="d-none">
+<div id="profile" class="d-none page-transition">
     <!--pfp modal -->
     <div class="modal fade" id="pfpModal" tabindex="-1" aria-labelledby="pfpModalLabel" aria-hidden="true">
         <div class="modal-dialog">
