--- a/public/profileguide.html
+++ b/public/profileguide.html
@@ -58,6 +58,7 @@
     .profile-images img {
       border-radius: 5px;
       transition: transform 0.3s;
+      cursor:pointer;
     }
     .profile-images img:hover {
       transform: scale(1.1);
@@ -84,6 +85,7 @@
       font-weight: 100;
       border-radius: 5px;
       padding: 3px;
+      cursor: pointer;
     }
     .front-end {
       color: #56B6C2;
